# uav_sec

./: CMakeLists.txt  build.sh
deCORE_Crypto-S/: CMakeLists.txt  README
deCORE_Crypto-S/include/: WBAC.h  vc_crt.h  vc_ecc.h  vc_hash.h  vc_rsa.h  vc_sm2.h  vc_sw_crypt.h  vc_sw_crypt_service.h
deCORE_Crypto-S/include/internal/: cryptlib.h  cryptlib_int.h  objects.h  rand.h
deCORE_Crypto-S/include/openssl/: ffx.h  skf.h
deCORE_Crypto-S/mbedtls_src/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake
deCORE_Crypto-S/src/: CMakeLists.txt  I_MAC  KEY_1  KEY_2  Makefile  WBAC.c  ca-cert.pem  client-cert.pem  cmake_install.cmake  cmakeclean.sh  copy.sh  encsv.pem  hashtst  init_so.c  main.c  maketst.sh  mp.map  mtst.sh  temp  tst  tstsv.pem  vc_aes.c  vc_crt.c  vc_ecc.c  vc_envelope.c  vc_hash.c  vc_key.c  vc_mac.c  vc_platform.c  vc_rsa.c  vc_se_crypt.c  vc_sm2.c  vc_sm4.c  vc_sw_crypt_service.c  wbdata_d  wbenc.tst
uav_src/: CMakeLists.txt  CRT_1  CRT_2  I_MAC  KEYID_AND_MAC.txt  KEY_1  KEY_2  KEY_3  Makefile  main.c
uav_src/api/: v2x_service.c  v2x_service.h
uav_src/include/: Boxes.h  init_so.h  vc_aes.h  vc_envelope.h  vc_hash.h  vc_key.h  vc_mac.h  vc_sm4.h  vc_sw_crypt.h  vecent_se_platform_info.h
uav_src/include/bn/: bn_lcl.h
uav_src/include/ec/: ec_lcl.h
uav_src/include/internal/: async.h  bn_int.h  engine.h  md32_common.h  sdf_int.h  skf_int.h
uav_src/include/openssl/: opensslconf.h  pem3.h
uav_src/network/: internet.c  internet.h
uav_src/seprotocol/: seInterface.c  seInterface.h
uav_src/units/: cJSON.c  cJSON.h  platformInfo.h  unit.c  unit.h
